# moderndid

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codecov.yml  pixi.toml  pyproject.toml  tox.ini  triplediff.tex
.github/: dependabot.yml  renovate.json5
.github/workflows/: ci.yml  codeql.yml  nightly.yml  post-release.yml  publish.yml  rtd-preview.yml  sync-closing-labels.yml  test-full.yml  test.yml
benchmark/: README.md  __init__.py  config.py  plot.py  run_benchmark.py
benchmark/common/: __init__.py  base.py  storage.py
benchmark/dgp/: __init__.py
benchmark/did/: README.md  __init__.py  config.py  dgp.py  run_benchmark.py  runners.py  storage.py
benchmark/didcont/: README.md  __init__.py  config.py  run_benchmark.py  runners.py  storage.py
benchmark/didinter/: README.md  __init__.py  config.py  run_benchmark.py  runners.py  storage.py
benchmark/didtriple/: README.md  __init__.py  config.py  run_benchmark.py  runners.py  storage.py
benchmark/results/: __init__.py  storage.py
benchmark/runners/: __init__.py  base.py  python_runner.py  r_runner.py
causaldid/did/: README.md
causaldid/drdid/: drdid.py  ipwdid.py  ordid.py
data/: __init__.py  data.py
didpy/: __init__.py  _version.py  data.py
didpy/_data/: __init__.py
didpy/did/: README.md  aggte.py  att_gt.py  compute_aggte.py  compute_att_gt.py  mboot.py
didpy/didhonest/: README.md  __init__.py  arp_nuisance.py  bounds.py  fixed_length_ci.py  honest_did.py  numba.py  sensitivity.py
didpy/drdid/: README.md  __init__.py  drdid.py  ipwdid.py  ordid.py
didpy/honestdid/: README.md  __init__.py  arp_nuisance.py  bounds.py  fixed_length_ci.py
docs/source/: acknowledgements.rst  conf.py  index.md  index.rst  installing.rst  user_guide.rst
doublediff/: __init__.py
doublediff/did/: compute_att_gt.py
doublediff/drdid/: README.md
drdidsynth/: __init__.py  _version.py
drsynthdid/: __init__.py  _version.py  estimators.py  preprocess.py  preprocessing.py  pscore.py  utils.py  wols.py
moderndid/: __init__.py  _version.py  panel.py
moderndid/core/: backend.py  converters.py  data.py  dataframe.py  format.py  gpu.py  maketables.py  numba_utils.py  panel.py  parallel.py  partition.py  preprocessing.py  result.py
moderndid/cupy/: __init__.py  backend.py  bootstrap.py
moderndid/dask/: __init__.py  _bootstrap.py  _checks.py  _ddd.py  _ddd_mp.py  _ddd_panel.py  _ddd_streaming.py  _did.py  _did_mp.py  _did_streaming.py  _didcont.py  _didcont_mp.py  _didinter.py  _didinter_mp.py  _gpu.py  _gram.py  _inf_func.py  _nuisance.py  _regression.py  _streaming.py  _utils.py  backend.py  ddd.py  ddd_rc.py  did.py  gram.py  monitor.py  pte.py  worker_utils.py
moderndid/did/: README.md  __init__.py  aggte.py  aggte_obj.py  att_gt.py  compute_aggte.py  compute_att_gt.py  container.py  format.py  mboot.py  multiperiod_obj.py  preprocess_did.py
moderndid/didcont/: README.md  format.py  (+5 more)
pydid/: __init__.py  data.py  datasets.py  utils.py  wols.py
scripts/: README.md  gpu_benchmark.py  setup.sh
tests/: __init__.py  base.py  conftest.py  dgp.py  helpers.py  test_base.py  test_boot.py  test_boot_panel.py  test_boot_rc.py  test_boot_reg_rc.py  test_boot_std_dr.py  test_boot_twfe_rc.py  test_bootstrap_panel.py  test_bootstrap_rc.py  test_bootstrap_rc_ipt.py  test_bootstrap_reg_rc.py  test_bootstrap_std_ipw_rc.py  test_compute_aggte.py  test_compute_att_gt.py  test_dask_native.py  test_data.py  test_datasets.py  test_dgp.py  test_drdid.py  test_drdid_imp_local_rc.py  test_drdid_imp_panel.py  test_drdid_imp_rc.py  test_drdid_panel.py  test_drdid_rc.py  test_drdid_trad_panel.py  test_drdid_trad_rc.py  test_estimators.py  test_ipw_did_rc.py  test_ipw_estimators.py  test_ipwdid.py  test_mboot.py  test_mboot_twfep_did.py  test_multi_obj.py  test_ordid.py  test_panel.py  (+14 more)
(+759 files in other folders)
