[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "moderndid"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Jordan DeKlerk", email = "jordan.deklerk@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version", "description"]
dependencies = [
  "numpy>=1.22.0",
  "scipy>=1.17",
  "polars>=1.0.0",
  "pyarrow>=8.0.0",
  "narwhals>=1.13.3",
  "statsmodels>=0.14.4",
  "prettytable>=3.10.0",
]

[tool.flit.module]
name = "moderndid"

[project.urls]
source = "https://github.com/jordandeklerk/moderndid"
tracker = "https://github.com/jordandeklerk/moderndid/issues"
documentation = "https://moderndid.readthedocs.io"

[project.optional-dependencies]
didcont = [
    "formulaic>=1.1.0",
]
didhonest = [
    "cvxpy[ECOS]>=1.3.0",
]
plots = [
    "plotnine>=0.14.0",
]
numba = [
    "numba>=0.57.0",
]
dask = [
    "dask[dataframe]>=2024.1.0",
    "distributed>=2024.1.0",
]
spark = [
    "pyspark>=3.4.0",
]
gpu = [
    "cupy-cuda12x>=13.0",
    "rmm-cu12>=24.04",
]
all = [
    "moderndid[didcont,didhonest,plots,numba,dask,spark]",
]
test = [
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-timeout",
    "pyfixest>=0.30.2",
]
doc = [
    "sphinx-book-theme",
    "myst-parser[linkify]",
    "myst-nb",
    "sphinx-copybutton",
    "numpydoc",
    "sphinx",
    "sphinx-design",
    "jupyter-sphinx",
]
dev = [
    "pre-commit",
    "ruff>=0.11.7",
    "mypy",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # Pycodestyle
    "W",   # Pycodestyle
    "D",   # pydocstyle
    "NPY", # numpy specific rules
    "UP",  # pyupgrade
    "I",   # isort
    "B",   # bugbear
    "BLE", # blind-except
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "D203",   # one-blank-line-before-class
    "D213",   # multi-line-summary-second-line
    "B024",   # abstract-base-class-without-abstract-method
    "B028",   # no-explicit-stacklevel
    "RUF002", # ambiguous-unicode-character-docstring (en-dash in refs is fine)
    "RUF012", # mutable-class-default (common pattern)
]

[tool.ruff.lint.per-file-ignores]
"moderndid/__init__.py" = ["I", "F401", "E402", "F403"]
"moderndid/**/__init__.py" = ["I", "F401", "E402", "F403"]
"tests/**/*" = ["D", "E402", "NPY002", "B905", "RUF005", "RUF015", "RUF043", "SIM102", "SIM108", "SIM114"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = false

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_configs = true
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true

disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true

# More strict checks for library code
[[tool.mypy.overrides]]
module = "moderndid"
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks benchmark tests",
]

[tool.coverage.run]
source = ["moderndid"]
